--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     color: #551A8B; /* Darker blue on hover */
                 }
             </style>
-            <!-- <a href="/timucua/quiz">Quiz</a><br> -->
+            <a href="/timucua/timucua_webonary_vocab.apkg">Anki Deck</a><br>
             <!-- <div class="calendar-link">
                 <a href="#" id="calendar-toggle">Class Calendar</a><span>: </span>
                 <a target="_blank" href="https://calendar.google.com/calendar/u/0?cid=ZWM0MTE4MmQ2YzZmYWNhODQ1ZjJmYmUzZGViOTNjYzEwYWI1ZTM4OGY5OTM3YjY2MGY0NmI2YzNmNzA5NTRlY0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t"><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en.gif"></a>
