--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </script> -->
             Citing
             <div class='title'><h1>Timucua Dictionary</h1></div>
-                <div class='search_input'><input type="text" id="searchInput" placeholder="Digite a palavra a ser pesquisada" /></div>
+                <div class='search_input'><input type="text" id="searchInput" placeholder="Write a word to search for..." /></div>
                 <div class='actions'>
                     <button class="search" id="searchButton">Search</button>
                     <!-- <div onclick="toggleAllOptionsContainers()" class="toggle-container disabled" id="toggleContainer">
